# polygram

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.claude/skills/huggingface/: SKILL.md
.github/workflows/: publish.yml  test.yml
ci-pending/: README.md  test.yml
docs/research/: behavioural-gram-probe.md  behavioural-scaleup-probe.md  behavioural-validator-design.md  cancellation-phase-floor.md  clustered-dictionary-recall-vs-flat.md  compression-action-design.md  compression-epoch-design.md  compression-regrow-design.md  cross-encoding-stability.md  decoder-gram-validity.md  deeper-layer-ablation-probe.md  learned-axis-assignment.md  rung-viability-methodology.md  rung3-rank-bound.md  rung3-viability-spike.md  rung4-viability-spike-v2.md  rung4-viability-spike.md  rung5-encoding.md  rung5-pareto-scans.md  sae-geometry-regimes.md  spec-disentanglement-loop.md
docs/research/data/: axis1_mps.json  axis1_mps_iter10.json  axis1_rung3_amp_on.json  axis1_rung4_amp_off.json  axis1_rung4_amp_on.json  axis1_rung4_amp_on_iter10.json  clustered_dictionary_recall.json  clustered_dictionary_recall_n8192.json  clustered_dictionary_recall_rung3_n2048.json  clustered_dictionary_recall_rung3_n8192.json  clustered_dictionary_recall_rung4_n2048.json  clustered_dictionary_recall_rung4_n8192.json  learned_axis_assignment_demo.json  rung3_rank_probe.json  rung3_viability_spike.json  rung3_viability_spike_constrained.json  rung4_rank_verification.json  rung4_viability_spike.json  rung4_viability_spike_constrained.json  rung5_rank_verification.json  rung_gram_condition_mps.json  rung_gram_condition_mps_phase_on.json  rung_gram_condition_rung3.json  rung_gram_condition_rung3_amp_on.json  rung_gram_condition_rung3_k8.json  rung_gram_condition_rung4.json  rung_gram_condition_rung4_amp_on.json  rung_gram_condition_rung4_both_on.json  rung_gram_condition_rung4_k8.json  runlog_C1_mps.txt  runlog_C1ext_mps_iter10.txt  runlog_C2_rung4_amp_off.txt  runlog_C3_rung4_amp_on.txt  runlog_C3ext_rung4_amp_on_iter10.txt  runlog_C4_rung3_amp_on.txt  scaleup_pairs.csv
docs/research/theory/: README.md  polygram.tex
examples/: README.md  animals_hea.py  animals_interference.ipynb  animals_interference.py  batch_animals_hea.py  behavioural_gram_probe.py  behavioural_gram_scaleup.py  behavioural_validate.py  cancellation_example.py  clustered_dictionary_walkthrough.py  compress_epoch_validated.py  compress_validated.py  convert_gemma_scope_to_safetensors.py  cross_encoding_stability.py  cross_encoding_stability_large.py  cross_encoding_stability_truly_insane.py  decoder_gram_validity.py  import_from_sae.py  learned_axis_assignment_demo.py  regrow_validated.py  rung3_rank_probe.py  rung3_viability_spike.py  rung4_rank_verification.py  rung4_viability_spike.py  rung5_pareto_scans.py  rung5_rank_verification.py  rung_compression_coverage.py  rung_gram_condition.py  sae_import_rung3_n16.py  sae_safetensors.py
openspec/changes/add-batch-experiment/: proposal.md  tasks.md
openspec/changes/add-behavioural-validator-loop/: proposal.md
openspec/changes/add-cluster-experts-mvp/: proposal.md  tasks.md
openspec/changes/add-cluster-shared-knobs/: proposal.md  tasks.md
openspec/changes/add-compression-action/: tasks.md
openspec/changes/add-compression-regrow/: design.md
openspec/changes/add-confirmation-strategies/: tasks.md
polygram/: __init__.py  _assertions.py  _qorca_emit.py  _state.py  _tier_stats.py  batch.py  cancellation.py  cli.py  clustered.py  clustered_dictionary.py  config.py  dictionary.py  emit.py  encoding.py  experiment.py  experts.py  sae_import.py
polygram/analysis/: __init__.py  feature_graph.py  triage.py
polygram/behavioural/: __init__.py  report.py  runtime.py  validator.py
polygram/compression/: __init__.py  _hash.py  compressor.py  epoch.py  epoch_report.py  pareto.py  regrow.py  regrow_report.py  report.py
polygram/confirmation/: __init__.py  cluster.py  decoder_geometry.py  protocol.py
polygram/geometry/: __init__.py  amp_assignment.py  clustered.py  learned_axis_assignment.py  objectives.py  phase_assignment.py  profile.py  protocols.py  registry.py  uniform_sphere.py
spikes/: rung2-verifier-spike.md  rung2-verifier-spike.py
tests/: _synth_sae.py  test_amp_knob_assignment.py  test_analysis.py  test_batch.py  test_cancellation.py  test_cli.py  test_clustered.py  test_clustered_golden.py  test_config.py  test_confirmation.py  test_confirmation_integration.py  test_dictionary.py  test_emit.py  test_encoding.py  test_examples.py  test_experiment.py  test_experts.py  test_from_sae_lens_profile_dispatch.py  test_geometry_registry.py  test_gram.py  test_learned_axis_assignment.py  test_load_sae_safetensors_bfloat16.py  test_phase_knob_assignment.py  test_qorca_emit.py  test_sae_import.py  test_sae_loader.py  test_sae_safetensors.py  test_smoke.py  test_state.py  test_uniform_sphere_profile.py
tests/behavioural/: test_device_resolution.py  test_report_roundtrip.py  test_validator_postinit.py  test_validator_predict.py
tests/cli/: test_compress_cli.py  test_compress_epoch_cli.py  test_regrow_cli.py  test_validate_cli.py
tests/compression/: _clustered_fixture.py  _fixtures.py  _rung3_fixture.py  test_cli_compress_pareto.py  test_compressor_apply.py  test_compressor_e2e_scale_aware_merge.py  test_compressor_plan.py  test_compressor_plan_pareto.py  test_compressor_plan_with_target.py  test_compressor_postinit.py  test_compressor_scale_aware.py  test_compressor_scale_stats.py  test_epoch_aggregation.py  test_epoch_clustered_consume.py  test_epoch_convergence.py  test_epoch_encoding_configurable.py  test_epoch_panel_selection.py  test_epoch_postinit.py  test_epoch_report_roundtrip.py  test_regrow_apply.py  test_regrow_determinism.py  test_regrow_from_compression_report.py  test_regrow_postinit.py  test_regrow_report_roundtrip.py  test_regrow_strategy_residual_kmeans.py  test_regrow_top_k.py  test_rep_selection_kl_attribution.py  test_report_roundtrip.py  test_strategy_merge.py
tests/encoding/: test_rung3.py
tests/fixtures/: golden_clustered.json  toy_sae.json
(+251 files in other folders)
